# Mokaccino

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json  config.toml
src/: lib.rs  main.rs  mokaccino.rs
src/client/: client.rs  commands.rs  lib.rs  microphone.rs  mod.rs  mokaccino.rs  speaker.rs  voice.rs
src/client/func/: functions.rs  mod.rs  network_handler.rs  parser.rs
src/client/network/: mod.rs  peer.rs  peerConnection.rs  server.rs  serverConnection.rs
src/client/networking/: mod.rs  networkHandler.rs
src/client/ui/: ui.rs
src/client/utils/: traits.rs
src/networking/: NetworkHandler.rs
src/ui/: terminal.rs
src/utils/: config.rs  constants.rs  mod.rs
src/utils/networking/: constants.rs  mod.rs  network_handler.rs  networkhandler.rs  packet.rs  peer.rs  protocol.rs  socket.rs  stream_handler.rs
src/utils/terminal/: cli.rs  mod.rs  parser.rs  tui.rs  user_interface.rs
