[package]
name = "mokaccino"
version = "0.1.0"
edition = "2021"
authors = ["[Lorenzinco, LoldemortXP]"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
const_format = "0.2.31"
ctrlc = "3.4.0"
env_logger = "0.10.0"
hashmap = "0.0.1"
log = "0.4.19"
regex = "1.8.4"
serde_json = "1.0.97"

[lib]
crate-type = ["cdylib"]
lib_name = "mokaccino"
lib_path = "src/lib.rs"
