[package]
name = "mokaccino"
version = "0.1.0"
edition = "2021"
authors = ["[Lorenzinco, LoldemortXP]"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
colored = "2.0.0"
const_format = "0.2.31"
ctrlc = "3.4.0"
env_logger = "0.10.0"
hashmap = "0.0.1"
log = "0.4.19"
regex = "1.8.4"
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.97"
toml = "0.7.5"
tui = "0.19.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
